# gnosis

./: .gitignore  CMakeLists.txt
include/gnosis/: fix.hpp  gnosis.hpp  math.hpp  string.hpp  utils.hpp  vec.hpp
source/: test.cpp
test/: CMakeLists.txt  test_fix.cpp
